<resources>
    <string name="app_name">RUS1_Bar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Universal buttons -->
    <string name="Ok">Ok</string>
    <string name="Cancel">Cancel</string>
    <string name="Buy">Buy</string>

    <!-- Login Fragment -->
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="RUS1_login_Text">RUS 1 - Bar</string>

    <!-- Settings Overview Fragment -->
    <string name="adminSettingTitle">Admin Settings</string>
    <string name="tutorSettingsBtn">Tutor Settings</string>
    <string name="logOffBtn">Log Off</string>
    <string name="productSettingsBtn">Product Settings</string>
    <string name="rusturSettingsBtn">Rustur Settings</string>
    <string name="billSettingsBtn">Bill Settings</string>

    <!-- Tutor Settings Fragment -->
    <string name="tutorAddBtn">Add Tutor</string>
    <string name="tutorlistTextView">Tutor List</string>
    <string name="cropCancel">Cancelled Crop Image</string>

    <!-- Product Settings Fragment -->
    <string name="categoryAddButton">Add Category</string>
    <string name="productAddBtn">Add Product</string>
    <string name="categoryEditBtn">Edit Category</string>
    <string name="productEditBtn">Edit Product</string>
    <string name="productSettingsCancelBtn">Cancel</string>
    <string name="productSettingsList">Product List</string>

    <!-- Bill Settings Fragment -->
    <string name="billSettingsViewBillBtn">View Bill</string>
    <string name="billSettingsTitle">Bill Settings</string>
    <string name="billSettingsSendBillBtn">Send Bill</string>
    <string name="billSettingsExportBillBtn">Export Bill</string>
    <string name="billSettingsCancelBtn">Cancel</string>

    <!-- Rustur Settings Fragment -->
    <string name="rusturSettingsAddRusturBtn">Add Rustur</string>
    <string name="rusturSettingsEditRusturBtn">Remove Rustur</string>
    <string name="rusturSettingsSetCurrentBtn">Set Rustur</string>
    <string name="rusturSettingsEndRusturBtn">End Rustur</string>
    <string name="rusturSettingsCancelBtn">Cancel</string>
    <string name="rusturSettingsTitle">Rustur Settings</string>
    <string name="rusturDeleteMsg">Remove through FireBase Console</string>
    <string name="rusturSetMsg">Press a rustur to set as current</string>
    <string name="rusturTitle">Rustur title</string>
    <string name="exporting">Exporting, may take a moment</string>
    <string name="validate">Name has to be 1 word and no \'.\', \'#\', \'$\', \'[\', or \']\'</string>

    <!-- Tutor view Fragment -->
    <string name="TutorName">TutorName</string>
    <string name="categoryname">CategoryName</string>
    <string name="productname">ProductName</string>
    <string name="itemprice">ItemPrice</string>
    <string name="itemname">ItemName</string>
    <string name="shopping_cart_product">Product:</string>
    <string name="price_dkk">Price:</string>
    <string name="button_shopping_cancel">Cancel</string>
    <string name="button_shopping_buy">Buy</string>
    <string name="appbar_action_settings">Settings</string>
    <string name="quantity">Qty:</string>
    <string name="ItemQuantity">ItemQuantity</string>

    <!-- Shopping Activity-->
    <string name="items_in_cart">Items in cart: </string>
    <string name="total_sum">Total sum: </string>

    <!-- Add Tutor -->
    <string name="addTutorTitle">Add Tutor</string>
    <string name="addTutorRealName">Add Name</string>
    <string name="addTutorEmail">Add Email</string>
    <string name="addTutorNumber">Add Phone Number</string>
    <string name="addTutorEditNick" />
    <string name="addTutorEditName" />
    <string name="addTutorEditEmail" />
    <string name="addTutorEditNumber" />
    <string name="addTutorCancelBtn">Cancel</string>
    <string name="addTutorAddBtn">Add</string>
    <string name="addTutorNickName">Add Nickname</string>

    <!-- Edit Tutor -->
    <string name="editTutorTitle">Edit Tutor</string>
    <string name="editTutorName">Name</string>
    <string name="editTutorNick">Nickname</string>
    <string name="editTutorEmail">E-mail</string>
    <string name="editTutorPhone">Phone Number</string>
    <string name="editTutorCancelBtn">Cancel</string>
    <string name="editTutorDeleteBtn">Delete Tutor</string>
    <string name="editTutorEditBtn">Edit Tutor</string>


    <string name="noProductsInBasket">No products to buy, press Cancel!</string>
    <string name="appbar_action_login">Login</string>
    <string name="savedInstanceState_ShoppingActivity">saveInstanceState of shoppingViewModel</string>
    <string name="SavedInstanceState_MainActivity" translatable="false">SavedInstance Sate Main Activity</string>

    <!-- Category Settings -->
    <string name="categorySettings">Category Settings</string>
    <string name="categorySettingsTitle">Category Settings</string>
    <string name="categorySettingsAddBtn">Add Category</string>
    <string name="categorySettingsCancelBtn">Cancel</string>

    <!-- Add Category -->
    <string name="addCategoriesCancelBtn">Cancel</string>
    <string name="addCategoriesAddBtn">Add</string>
    <string name="addCategoryTitle">Add Category</string>
    <string name="addCategoryName">Category Name</string>
    <string name="addCategoryImage" translatable="false">addCategoryImage</string>
    <string name="addCategoryEditName" translatable="false">addCategoryEditName</string>

    <!-- Edit Category -->
    <string name="editCategoryTitle">Edit Category</string>
    <string name="editCategoryCancelBtn">Cancel</string>
    <string name="editCategoryEditBtn">Edit</string>
    <string name="editCategoryDeleteBtn">Delete</string>
    <string name="editCategoryName">Category Name</string>
    <string name="editCategoryEditName" />

    <!-- Add Product -->
    <string name="addProductCancelBtn">Cancel</string>
    <string name="addProductTitle">Add Product</string>
    <string name="addProductAddBtn">Add</string>
    <string name="addProductName">Product Name</string>
    <string name="addProductCategory">Add Category</string>
    <string name="addProductPrice">Add Price</string>
    <string name="addProductEditName" />
    <string name="addProductsEditCategory" />
    <string name="addProductImage" />

    <!-- Edit Product -->
    <string name="editProductCancelBtn">Cancel</string>
    <string name="editProductDeleteBtn">Delete</string>
    <string name="editProductEditBtn">Edit</string>
    <string name="editProductTitle">Edit Product</string>
    <string name="editProductName">Product Name</string>
    <string name="editProductCategory">Product Category</string>
    <string name="editProductEditName" />
    <string name="editProductEditCategory">Name</string>
    <string name="editProductEditPrice">Product Price</string>
    <string name="administrator">Administrator</string>
    <string name="bartender">Bartender</string>
    <string name="ExportingToMail">Exporting Bill. Hang on...</string>
    <string name="BarRusMail" translatable="false">bar@rus1katriebjerg.dk</string>
    <string name="youregood">Aaand you\'re good. Done.</string>
    <string name="KasserRusMail" translatable="false">Kasser@Rus1Katrinebjerg.dk</string>
    <string name="send_to" translatable="false">Mail</string>
    <string name="BarappRusMail" translatable="false">Rus1.Barapp@gmail.com</string>


</resources>
