<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.LoginFragment">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/RUS1_login_Text"
        android:textColor="@color/DarkPurple"
        android:textSize="50dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/layout_username"
        app:layout_constraintEnd_toEndOf="@+id/login_btn"
        app:layout_constraintStart_toStartOf="@+id/cancel_btn"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout

        android:id="@+id/layout_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:weightSum="100"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.405">

        <com.google.android.material.textfield.TextInputLayout

            android:id="@+id/input_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="60"
            app:errorEnabled="true"
            app:helperText=""
            app:layout_constraintBottom_toBottomOf="parent"

            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText

                android:id="@+id/EmailEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/fui_email_hint"
                android:inputType="textEmailAddress"
                android:maxLines="1">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout

        android:id="@+id/layout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:weightSum="100"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_username"
        app:layout_constraintVertical_bias="0.076">


        <com.google.android.material.textfield.TextInputLayout

            android:id="@+id/input_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="60"
            app:errorEnabled="true"
            app:helperText=""
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            >

            <com.google.android.material.textfield.TextInputEditText

                android:id="@+id/PasswordEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/Password"
                android:inputType="textPassword"
                android:maxLines="1"
                />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <Button
        style="@style/btnGoTheme"
        android:id="@+id/login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Login"
        app:layout_constraintBottom_toBottomOf="@+id/cancel_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cancel_btn"
        app:layout_constraintTop_toTopOf="@+id/cancel_btn" />

    <Button
        android:id="@+id/cancel_btn"
        style="@style/btnBackTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Cancel"
        android:textColorHighlight="@color/LightPurple"
        android:textColorLink="@color/LightPurple"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/login_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_password"
        app:layout_constraintVertical_bias="0.227" />

</androidx.constraintlayout.widget.ConstraintLayout>

    <!--Inspiration from https://github.com/mitchtabian/Navigation-Components-Example/blob/master/app/src/main/res/layout/activity_main.xml-->
    <!--After following the video tutorial https://www.youtube.com/watch?v=IEO2X5OU3MY-->
